Sample contents added

--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
         text-align: center;
         padding-top: 115px;
       }
+
+      @font-face {
+        font-family: "Thermal-Receipt";
+        src: url("/assets/fonts/thermal-receipt/thermal-receipt.ttf")
+          format("truetype");
+        font-weight: normal;
+        font-style: normal;
+      }
     </style>
   </head>
   <body>
@@ -52,6 +60,120 @@
       <div id="template-container" class="zig-zag-top-bottom">
         <div id="pump-logo">
           <img src="/assets//images/pump-logo-indian-oil.webp" />
+        </div>
+        <div id="template-content">
+          <div id="welcome">Welcomes You</div>
+          <div id="address">
+            <!-- <span class="label">Address</span> : -->
+            <span class="content"
+              >GOKUL FUEL POINT YELANAHALLI, BEGUR 560068</span
+            >
+          </div>
+          <div id="tel-no">
+            <span class="label">Tel. No.</span> :
+            <span class="content">0000000000</span>
+          </div>
+          <div id="info-1">
+            <div class="line-item">
+              <span class="label">Receipt No.</span> :
+              <span class="content">0000000000</span>
+            </div>
+            <div class="line-item">
+              <span class="label">Local ID</span> :
+              <span class="content">0000000000</span>
+            </div>
+            <div class="line-item">
+              <span class="label">FIP No.</span> :
+              <span class="content">1</span>
+            </div>
+            <div class="line-item">
+              <span class="label">Nozzle No.</span> :
+              <span class="content">1</span>
+            </div>
+            <div class="line-item">
+              <span class="label">Product</span> :
+              <span class="content">Petrol</span>
+            </div>
+          </div>
+          <div id="info-2">
+            <div class="line-item">
+              <span class="label">Preset Type</span> :
+              <span class="content">Amount</span>
+            </div>
+            <div class="line-item">
+              <span class="label">Rate(Rs/L)</span> :
+              <span class="content">101.94</span>
+            </div>
+            <div class="line-item">
+              <span class="label">Volume(L)</span> :
+              <span class="content">0001.96</span>
+            </div>
+            <div class="line-item">
+              <span class="label">Amount(Rs)</span> :
+              <span class="content">200.00</span>
+            </div>
+            <div class="line-item">
+              <span class="label">Atot</span> :
+              <span class="content">0000000000.000</span>
+            </div>
+            <div class="line-item">
+              <span class="label">Vtot</span> :
+              <span class="content">0000000000.000</span>
+            </div>
+          </div>
+
+          <div id="info-3">
+            <div id="vehicle">
+              <div class="line-item">
+                <span class="label">Vehicle No</span> :
+                <span class="content">Not Entered</span>
+              </div>
+            </div>
+            <div id="mobile">
+              <div class="line-item">
+                <span class="label">Mobile No</span> :
+                <span class="content">Not Entered</span>
+              </div>
+            </div>
+          </div>
+
+          <div id="info-4">
+            <div class="line-item">
+              <span class="label">Date</span> :
+              <span class="content">00/00/00</span>
+            </div>
+            <div class="line-item">
+              <span class="label">Time</span> :
+              <span class="content">10:00</span>
+            </div>
+          </div>
+          <div id="business-info">
+            <div class="line-item">
+              <span class="label">CST No</span> :
+              <span class="content"></span>
+            </div>
+            <div class="line-item">
+              <span class="label">LST No</span> :
+              <span class="content"></span>
+            </div>
+            <div class="line-item">
+              <span class="label">VAT No</span> :
+              <span class="content"></span>
+            </div>
+            <div class="line-item">
+              <span class="label">ATTENDANT ID</span> :
+              <span class="content">Not Available</span>
+            </div>
+            <div class="line-item">
+              <span class="label">FCC DATE</span> :
+              <span class="content">Not Available</span>
+            </div>
+            <div class="line-item">
+              <span class="label">FCC TIME</span> :
+              <span class="content">Not Available</span>
+            </div>
+          </div>
+          <div id="footer">Thanks You! Please Visit Avain..</div>
         </div>
       </div>
     </div>
