--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         justify-content: center;
         align-items: center;
       }
+
       #template-container {
         width: 240px;
         min-height: 768px;
@@ -52,6 +53,11 @@
           format("truetype");
         font-weight: normal;
         font-style: normal;
+      }
+
+      #template-content {
+        font-family: Thermal-Receipt;
+        padding: 10px;
       }
     </style>
   </head>
@@ -173,7 +179,7 @@
               <span class="content">Not Available</span>
             </div>
           </div>
-          <div id="footer">Thanks You! Please Visit Avain..</div>
+          <div id="footer">Thanks You! Please Visit Again..</div>
         </div>
       </div>
     </div>
