--- a/index.html
+++ b/index.html
@@ -69,112 +69,103 @@
         </div>
         <div id="template-content">
           <div id="welcome">Welcomes You</div>
-          <div id="address">
-            <!-- <span class="label">Address</span> : -->
+          <div id="address-block">
             <span class="content"
               >GOKUL FUEL POINT YELANAHALLI, BEGUR 560068</span
             >
           </div>
-          <div id="tel-no">
-            <span class="label">Tel. No.</span> :
-            <span class="content">0000000000</span>
-          </div>
-          <div id="info-1">
-            <div class="line-item">
+          <div class="info-block">
+            <div class="line-item" id="receiptNo">
               <span class="label">Receipt No.</span> :
               <span class="content">0000000000</span>
             </div>
-            <div class="line-item">
+            <div class="line-item" id="localId">
               <span class="label">Local ID</span> :
               <span class="content">0000000000</span>
             </div>
-            <div class="line-item">
+            <div class="line-item" id="fipNo">
               <span class="label">FIP No.</span> :
               <span class="content">1</span>
             </div>
-            <div class="line-item">
+            <div class="line-item" id="nozzelNo">
               <span class="label">Nozzle No.</span> :
               <span class="content">1</span>
             </div>
-            <div class="line-item">
+            <div class="line-item" id="product">
               <span class="label">Product</span> :
               <span class="content">Petrol</span>
             </div>
           </div>
-          <div id="info-2">
-            <div class="line-item">
+          <div class="info-block">
+            <div class="line-item" id="presetType">
               <span class="label">Preset Type</span> :
               <span class="content">Amount</span>
             </div>
-            <div class="line-item">
+            <div class="line-item" id="rate">
               <span class="label">Rate(Rs/L)</span> :
               <span class="content">101.94</span>
             </div>
-            <div class="line-item">
+            <div class="line-item" id="volume">
               <span class="label">Volume(L)</span> :
               <span class="content">0001.96</span>
             </div>
-            <div class="line-item">
+            <div class="line-item" id="amount">
               <span class="label">Amount(Rs)</span> :
               <span class="content">200.00</span>
             </div>
-            <div class="line-item">
+            <div class="line-item" id="atot">
               <span class="label">Atot</span> :
               <span class="content">0000000000.000</span>
             </div>
-            <div class="line-item">
+            <div class="line-item" id="vtot">
               <span class="label">Vtot</span> :
               <span class="content">0000000000.000</span>
             </div>
           </div>
 
-          <div id="info-3">
-            <div id="vehicle">
-              <div class="line-item">
-                <span class="label">Vehicle No</span> :
-                <span class="content">Not Entered</span>
-              </div>
+          <div class="info-block">
+            <div class="line-item" id="vehicleNo">
+              <span class="label">Vehicle No</span> :
+              <span class="content">Not Entered</span>
             </div>
-            <div id="mobile">
-              <div class="line-item">
-                <span class="label">Mobile No</span> :
-                <span class="content">Not Entered</span>
-              </div>
+            <div class="line-item" id="mobileNo">
+              <span class="label">Mobile No</span> :
+              <span class="content">Not Entered</span>
             </div>
           </div>
 
-          <div id="info-4">
-            <div class="line-item">
+          <div class="info-block">
+            <div class="line-item" id="date">
               <span class="label">Date</span> :
               <span class="content">00/00/00</span>
             </div>
-            <div class="line-item">
+            <div class="line-item" id="time">
               <span class="label">Time</span> :
               <span class="content">10:00</span>
             </div>
           </div>
-          <div id="business-info">
-            <div class="line-item">
+          <div class="info-block">
+            <div class="line-item" id="cstNo">
               <span class="label">CST No</span> :
               <span class="content"></span>
             </div>
-            <div class="line-item">
+            <div class="line-item" id="lstNo">
               <span class="label">LST No</span> :
               <span class="content"></span>
             </div>
-            <div class="line-item">
+            <div class="line-item" id="vatNo">
               <span class="label">VAT No</span> :
               <span class="content"></span>
             </div>
-            <div class="line-item">
+            <div class="line-item" id="attendantId">
               <span class="label">ATTENDANT ID</span> :
               <span class="content">Not Available</span>
             </div>
-            <div class="line-item">
+            <div class="line-item" id="fccDate">
               <span class="label">FCC DATE</span> :
               <span class="content">Not Available</span>
             </div>
-            <div class="line-item">
+            <div class="line-item" id="fccTime">
               <span class="label">FCC TIME</span> :
               <span class="content">Not Available</span>
             </div>
