--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       #template-container {
         width: 240px;
         min-height: 768px;
-        background-image: url(/assets/images/background-2.jpeg);
+        background-image: url(assets/images/background-2.jpeg);
         background-repeat: round;
         position: relative;
         background-size: cover;
@@ -49,7 +49,7 @@
 
       @font-face {
         font-family: "Thermal-Receipt";
-        src: url("/assets/fonts/thermal-receipt/thermal-receipt.ttf")
+        src: url("assets/fonts/thermal-receipt/thermal-receipt.ttf")
           format("truetype");
         font-weight: normal;
         font-style: normal;
@@ -101,11 +101,11 @@
   <body>
     <div id="container">
       <div id="template-container" class="zig-zag-top-bottom">
-        <div id="side-logo">
-          <img src="/assets/images/side-logo.webp" />
-        </div>
+        <!-- <div id="side-logo">
+          <img src="assets/images/side-logo.webp" />
+        </div> -->
         <div id="pump-logo">
-          <img src="/assets/images/pump-logo-indian-oil.webp" />
+          <img src="assets/images/pump-logo-indian-oil.webp" />
           <!-- <img src="/assets/images/pump-logo-hp.webp" /> -->
         </div>
         <div id="template-content">
