--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="container"></div>
 
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="/templates/AbstractTemplate.js"></script>
     <script src="/templates/template-1/Template1.js"></script>
     <script>
